deploy/retrieveUnpackaged/objects/SFDC_Strategy__c.object
<CustomObject>
    <description>Specific set of strategies tied to each account that the sales manager needs to executive.  Each strategy lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each strategy.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>SFDC_Acct_Plan__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>R00N50000001oQ1AEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Addressed__c</fullName>
        <label>Business Problem Addressed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Est_Comp_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Product_Revenue__c</fullName>
        <label>Estimated Product Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Service_Revenue__c</fullName>
        <label>Estimated Service Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Revenue__c</fullName>
        <formula>Estimated_Product_Revenue__c  +  Estimated_Service_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_can_we_help_them_succeed__c</fullName>
        <label>How can we help them succeed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_do_we_measure_success__c</fullName>
        <label>How do we measure success</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Sponsor__c</fullName>
        <label>Key Contact Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>R00N50000001oQ1GEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>R00N50000001oQ1MEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Goal__c</fullName>
        <label>Solution / Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Status__c</fullName>
        <label>Strategy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won - Achieved Rev. Goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won - Partial Achievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - No Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_are_their_success_factors__c</fullName>
        <label>What are their success factors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_barriers_to_success_do_they_foresee__c</fullName>
        <label>What barriers to success do they foresee</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>